# RemoteInput

./: .gitignore  .npmignore  CMakeLists.txt  binding.gyp  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
RemoteInput/: EIOS.cxx
RemoteInput/Echo/: Atomics.cxx  Atomics.hxx
RemoteInput/Platform/: NativeHooks_Windows.cxx  Platform_Windows.cxx
RemoteInput/Plugin/: Graphics.cxx  Graphics.hxx  SimbaPlugin.hxx
RemoteInput/Plugin/Node/: NodeAddon.cxx  NodeCommon.hxx  NodeEIOS.cxx  NodeEIOS.hxx
src/: index.ts
test/: test.js  test.ts
